src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/ARBDrawInstanced_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/ARBDrawInstanced_StringErrorContext.class */
public final class ARBDrawInstanced_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glDrawArraysInstancedARB(IIII)V", "net/labymod/core/laby3d/opengl/error/generated/ARBDrawInstancedErrorContext");
        methods.put("nglDrawElementsInstancedARB(IIIJI)V", "net/labymod/core/laby3d/opengl/error/generated/ARBDrawInstancedErrorContext");
        methods.put("glDrawElementsInstancedARB(IIIJI)V", "net/labymod/core/laby3d/opengl/error/generated/ARBDrawInstancedErrorContext");
        methods.put("glDrawElementsInstancedARB(IILjava/nio/ByteBuffer;I)V", "net/labymod/core/laby3d/opengl/error/generated/ARBDrawInstancedErrorContext");
        methods.put("glDrawElementsInstancedARB(ILjava/nio/ByteBuffer;I)V", "net/labymod/core/laby3d/opengl/error/generated/ARBDrawInstancedErrorContext");
        methods.put("glDrawElementsInstancedARB(ILjava/nio/ShortBuffer;I)V", "net/labymod/core/laby3d/opengl/error/generated/ARBDrawInstancedErrorContext");
        methods.put("glDrawElementsInstancedARB(ILjava/nio/IntBuffer;I)V", "net/labymod/core/laby3d/opengl/error/generated/ARBDrawInstancedErrorContext");
        return methods;
    }
}
